fixed spacing

--- a/src/components/allcourses/courses.css
+++ b/src/components/allcourses/courses.css
@@ -124,7 +124,7 @@
   margin-top: 0;
 }
 .space{
-  padding: 40px;
+  padding-bottom: 80px;
 }
 .space2{
   padding: 40px;
