--- a/src/components/pricing/price.css
+++ b/src/components/pricing/price.css
@@ -5,7 +5,7 @@
 .price h1 {
   font-size: 50px;
   margin: 20px 0;
-  color: #810001;
+  color: #000000;
 }
 .price h1 span {
   font-size: 20px;
